@@ -22,8 +22,8 @@
 /* -----------------------------------------------------------------------
    Private functions
    ----------------------------------------------------------------------- */
-static int
-is_xio_patient_dir (std::string dir)
+int
+Xio_dir::is_xio_patient_dir (std::string dir)
 {
     itksys::Directory itk_dir;
     if (!itk_dir.Load (dir.c_str())) {
@@ -43,8 +43,8 @@ is_xio_patient_dir (std::string dir)
     return 0;
 }
 
-static int
-is_xio_studyset_dir (std::string dir)
+int
+Xio_dir::is_xio_studyset_dir (std::string dir)
 {
     itksys::Directory itk_dir;
     if (!itk_dir.Load (dir.c_str())) {
@@ -66,8 +66,8 @@ is_xio_studyset_dir (std::string dir)
     return 0;
 }
 
-static int
-is_xio_plan_dir (std::string dir)
+int
+Xio_dir::is_xio_plan_dir (std::string dir)
 {
     itksys::Directory itk_dir;
     if (!itk_dir.Load (dir.c_str())) {
@@ -88,90 +88,16 @@ is_xio_plan_dir (std::string dir)
     return 0;
 }
 
-static Xio_patient_dir*
-xio_dir_add_patient_dir (Xio_dir *xd, std::string dir)
+Xio_patient*
+Xio_dir::add_patient_dir (std::string dir)
 {
-    Xio_patient_dir *xpd;
-    xd->patient_dir = (Xio_patient_dir*) realloc (xd->patient_dir, 
-	(xd->num_patient_dir+1) * sizeof (Xio_patient_dir));
-    xpd = &xd->patient_dir[xd->num_patient_dir];
-    xd->num_patient_dir ++;
-
-    strncpy (xpd->path, dir.c_str(), _MAX_PATH);
-    xpd->num_studyset_dir = 0;
-    xpd->num_plan_dir = 0;
-    xpd->studyset_dir = 0;
-    xpd->plan_dir = 0;
-
+    Xio_patient *xpd = new Xio_patient (dir.c_str());
+    this->patient_dir.push_back (xpd);
     return xpd;
 }
 
-static void
-xio_patient_dir_add_studyset_dir (
-    Xio_patient_dir *xpd, 
-    std::string studyset_path
-)
-{
-    Xio_studyset_dir *xsd;
-
-    xpd->studyset_dir = (Xio_studyset_dir*) realloc (xpd->studyset_dir, 
-	(xpd->num_studyset_dir+1) * sizeof (Xio_studyset_dir));
-    xsd = &xpd->studyset_dir[xpd->num_studyset_dir];
-    xpd->num_studyset_dir ++;
-
-    strncpy (xsd->path, studyset_path.c_str(), _MAX_PATH);
-}
-
-static void
-xio_patient_dir_add_plan_dir (
-    Xio_patient_dir *xpd,
-    std::string plan_path
-)
-{
-    Xio_plan_dir *xtpd;
-
-    xpd->plan_dir = (Xio_plan_dir*) realloc (xpd->plan_dir, 
-	(xpd->num_plan_dir+1) * sizeof (Xio_plan_dir));
-    xtpd = &xpd->plan_dir[xpd->num_plan_dir];
-    xpd->num_plan_dir ++;
-
-    strncpy (xtpd->path, plan_path.c_str(), _MAX_PATH);
-}
-
-static void
-xio_patient_dir_analyze (Xio_patient_dir *xpd)
-{
-    itksys::Directory itk_dir;
-    std::string plan_path = std::string(xpd->path) + "/plan";
-    std::string studyset_path = std::string(xpd->path) + "/anatomy/studyset";
-
-    if (itk_dir.Load (studyset_path.c_str())) {
-	for (unsigned long i = 0; i < itk_dir.GetNumberOfFiles(); i++) {
-	    std::string curr_file = itk_dir.GetFile(i);
-	    std::string curr_path = studyset_path + "/" + itk_dir.GetFile(i);
-
-	    if (is_xio_studyset_dir (curr_path)) {
-		printf ("Adding xsd: %s\n", curr_path.c_str());
-		xio_patient_dir_add_studyset_dir (xpd, curr_path);
-	    }
-	}
-    }
-
-    if (itk_dir.Load (plan_path.c_str())) {
-	for (unsigned long i = 0; i < itk_dir.GetNumberOfFiles(); i++) {
-	    std::string curr_file = itk_dir.GetFile(i);
-	    std::string curr_path = plan_path + "/" + itk_dir.GetFile(i);
-
-	    if (is_xio_plan_dir (curr_path)) {
-		printf ("Adding xtpd: %s\n", curr_path.c_str());
-		xio_patient_dir_add_plan_dir (xpd, curr_path);
-	    }
-	}
-    }
-}
-
-static void
-xio_dir_analyze_recursive (Xio_dir *xd, std::string dir)
+void
+Xio_dir::analyze_recursive (std::string dir)
 {
     itksys::Directory itk_dir;
 
@@ -181,34 +107,40 @@ xio_dir_analyze_recursive (Xio_dir *xd, std::string dir)
 
     /* Look for top-level patient directory */
     if (is_xio_patient_dir (dir)) {
-	Xio_patient_dir *curr_patient_dir 
-	    = xio_dir_add_patient_dir (xd, dir);
-	xio_patient_dir_analyze (curr_patient_dir);
+	printf ("Found plan dir\n");
+	Xio_patient *xpd = this->add_patient_dir (dir);
+	xpd->analyze ();
 
 	std::string demographic_file = dir + "/demographic";
 	if (file_exists (demographic_file.c_str())) {
-	    xd->m_demographic_fn = demographic_file.c_str();
+	    xpd->m_demographic_fn = demographic_file.c_str();
 	}
-
 	return;
     }
 
     /* Look for plan directories.
        GCS FIX: Each plan counts as a separate patient */
     else if (is_xio_plan_dir (dir)) {
+	Xio_patient *xpd = this->add_patient_dir (dir);
+	xpd->add_plan_dir (dir);
 
-	Xio_patient_dir *xpd
-	    = xio_dir_add_patient_dir (xd, dir);
-	xio_patient_dir_add_plan_dir (xpd, dir);
+	std::string demographic_file = dir + "/../../demographic";
+	if (file_exists (demographic_file.c_str())) {
+	    xpd->m_demographic_fn = demographic_file.c_str();
+	}
 	return;
     }
 
     /* Look for studyset directories.  
        GCS FIX: Each studyset counts as a separate patient */
     else if (is_xio_studyset_dir (dir)) {
-	Xio_patient_dir *xpd
-	    = xio_dir_add_patient_dir (xd, dir);
-	xio_patient_dir_add_studyset_dir (xpd, dir);
+	Xio_patient *xpd = this->add_patient_dir (dir);
+	xpd->add_studyset_dir (dir);
+
+	std::string demographic_file = dir + "/../../demographic";
+	if (file_exists (demographic_file.c_str())) {
+	    xpd->m_demographic_fn = demographic_file.c_str();
+	}
 	return;
     }
 
@@ -219,7 +151,7 @@ xio_dir_analyze_recursive (Xio_dir *xd, std::string dir)
 	if (curr_file == "." || curr_file == "..") continue;
 
 	if (itksys::SystemTools::FileIsDirectory (curr_path.c_str())) {
-	    xio_dir_analyze_recursive (xd, curr_path);
+	    this->analyze_recursive (curr_path);
 	}
     }
 }
@@ -227,62 +159,34 @@ xio_dir_analyze_recursive (Xio_dir *xd, std::string dir)
 /* -----------------------------------------------------------------------
    Public functions
    ----------------------------------------------------------------------- */
-#if defined (commentout)
-Xio_dir*
-xio_dir_create (const char *input_dir)
-{
-    Xio_dir *xd;
-    xd = (Xio_dir*) malloc (sizeof (Xio_dir));
-
-    xd->path = input_dir;
-    xd->num_patient_dir = -1;
-    xd->patient_dir = 0;
-
-    xio_dir_analyze (xd);
-    return xd;
-}
-
-void
-xio_dir_destroy (Xio_dir* xd)
-{
-    if (xd->patient_dir) {
-	free (xd->patient_dir);
-    }
-    free (xd);
-}
-#endif
-
 Xio_dir::Xio_dir (const char *input_dir)
 {
     this->path = input_dir;
-    this->num_patient_dir = -1;
-    this->patient_dir = 0;
-
-    xio_dir_analyze (this);
+    this->analyze ();
 }
 
 Xio_dir::~Xio_dir ()
 {
-    if (this->patient_dir) {
-	free (this->patient_dir);
+    std::vector<Xio_patient*>::iterator it;
+    for (it = this->patient_dir.begin(); it < this->patient_dir.end(); ++it) {
+	delete *it;
     }
 }
 
 void
-xio_dir_analyze (Xio_dir *xd)
+Xio_dir::analyze ()
 {
-    xd->num_patient_dir = 0;
-    if (!is_directory ((const char*) xd->path)) {
+    if (!is_directory ((const char*) this->path)) {
 	return;
     }
 
-    xio_dir_analyze_recursive (xd, std::string ((const char*) xd->path));
+    this->analyze_recursive (std::string ((const char*) this->path));
 }
 
 int
-xio_dir_num_patients (Xio_dir* xd)
+Xio_dir::num_patients () const
 {
-    return xd->num_patient_dir;
+    return this->patient_dir.size();
 }
 
 Xio_studyset_dir*
@@ -295,7 +199,7 @@ xio_plan_dir_get_studyset_dir (Xio_plan_dir* xtpd)
 
     xsd = (Xio_studyset_dir*) malloc (sizeof (Xio_studyset_dir));
     
-    if (is_xio_plan_dir (xtpd->path)) {
+    if (Xio_dir::is_xio_plan_dir (xtpd->path)) {
 	/* Get studyset name from plan */
 	std::string plan_file = std::string(xtpd->path) + "/plan";
 	printf ("plan_file: %s\n", plan_file.c_str());
